Fix header btn alignment

--- a/resources/assets/sass/modules/_header.sass
+++ b/resources/assets/sass/modules/_header.sass
@@ -48,7 +48,7 @@
 	max-width: 430px
 	margin: 0 auto
 	line-height: 1.5
-	margin-bottom: 80px
+	margin-bottom: 60px
 
 .contact-btn
 	color: $lightGray
@@ -94,4 +94,4 @@
 	height: 45px
 	border: none
 	margin: 0 auto
-	margin-top: 90px
+	margin-top: 80px
